1998-10-27  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* MessageProbeWidget.m (printVal): Handle void return case.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Swarm 1.3.1 released.

	* ActionCache.m ([ActionCache -deliverActions]): Use %lu instead of %u.

	* ActionCache.m ([ActionCache -createProcCtl]): Set geometry of
	ButtonPanel here.

1998-09-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CommonProbeDisplay.m ([CommonProbeDisplay -install]): Use 
	Canvas checkGeometry: instead of Frame assertGeometry.
	
	* CompleteProbeDisplay.m ([CompleteProbeDisplay -do_resize]): Likewise.

1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CommonProbeDisplay.m ([CommonProbeDisplay -createEnd]): 
	Use addWidget:X:Y:centerFlag on canvas instead of assertPosition
	on frame.

1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): Use
	setTargetWidget: instead of setProbeDisplay:

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): Likewise.

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): Remove 
	call to setProbeDisplayManager.

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): Likewise.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ControlPanel.m ([ControlPanel -startInActivity:]): Use RUNNINGP.

1998-09-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m (printVal): Add support for unsigned int,
	long, and unsigned long.  Don't return in each case, return buf at
	the end.  Abort in default case.
	(printVal): Add char, unsigned char, short, and unsigned short.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtoolsgui.h (CommonProbeDisplay): Declare -getTopLevel.

	* CommonProbeDisplay.[hm]: Add -getTopLevel.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
