@@ -1,3 +1,12 @@
+1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* simtoolsgui.m: Include defobj.h instead of objectbase/Arguments.h.
+
+	* ControlPanel.m: Include defobj.h instead of simtools/Archiver.h.
+
+	* ActionCache.m: Include defobj.h instead of objectbase/Arguments.h
+	and simtools/Archiver.h (the latter wasn't needed, anyway).
+
 1998-10-27  Marcus G. Daniels  <mgd@helen.santafe.edu>
 
 	* MessageProbeWidget.m (printVal): Handle void return case.
